--- a/sample_app/app/views/layouts/_header.html.erb
+++ b/sample_app/app/views/layouts/_header.html.erb
@@ -1,14 +1,12 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
-      <%= link_to "sample app", '#', id: "logo" %>
+      <%= link_to "sample app", root_path, id: "logo" %>
       <nav>
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "About", anout_path%></li>
           <li><%= link_to "Help", help_path %></li>
-          <li><%= link_to "Contact", contact_path %></li>
-          <li><%= link_to "Sign up", signup_path %></li>
-          <li><%= link_to "log in", login_path%></li>
+          <li><%#= link_to "Sign up", signup_path %></li>
+          <li><%= link_to "log in", '#' %></li>
 
         </ul>
       </nav>
